--- a/_config.yml
+++ b/_config.yml
@@ -7,16 +7,16 @@
 ## Uses distinct namespace. Jekyll settings should go at the root level.
 githubiverse:
     ## Metadata
-    title: "Mechanical Movement #27"
-    author: Gary Hodgson
+    title: "Nothing"
+    author: Sam Rose
     license: GPL3
     tags: [mechanical movement, fun]
 
     ## Github project parameters.
     github:
         base: https://github.com/
-        user: garyhodgson
-        repository: githubiverse-tst
+        user: samrose
+        repository: examplerepo
         branch: master
 
     ## The names of directories where any images, source and stl files associated with the project can be found.
